--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -1,8 +1,6 @@
 block variables
 include ../mixins/mixins
-include ../mixins/checkbox
-include ../mixins/field
-include ../mixins/textarea
+include ../mixins/ui
 
 doctype html
 html(lang="ru")
