--- a/app/templates/modules/contact.pug
+++ b/app/templates/modules/contact.pug
@@ -14,4 +14,4 @@ mixin contact
           +checkbox('pricelist', 'pricelist', 'Хочу получить прайс-листи')
           +checkbox('agree', 'agree', 'Согласие на обработку персональных данных в соответствии с политикой конфиденциальности')
         .contact-box-form-el
-            button(type="submit" name="send" value="1") Отправить +
+            button(type="submit" name="send" value="1").main-link Отправить
