--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -34,7 +34,7 @@ mixin header
           .left
             .left-desc Служба поддержки потребителей
             .left-number 8 800 250-93-93
-            a(href="") Задать вопрос
+            +link('Задать вопрос', '#')
           .right
             .right-desc Мы в социальных сетях
             .right-group
