[UPDATE/FIX] обновление docs / исправление главной страницы

--- a/app/templates/modules/recepts.pug
+++ b/app/templates/modules/recepts.pug
@@ -10,7 +10,7 @@ mixin recepts
   section.recepts
     .content.recepts-box
       .recepts-box-left
-        h2 Рецепты с адыгейским сыром
+        h2 Рецепты <br>с адыгейским сыром
         .recepts-box-left-arrows.main-slider-buttons
           +btn-slider('left').bg-additional#slider-recepts-left
           +btn-slider('right').bg-additional#slider-recepts-right
