--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 74.4em 288.8em;
+    background-size: 74.4em 312.7em;
 }
 
 .no-svg .svg-icon:before {
@@ -107,8 +107,17 @@
 
 
 
-  .svg-icon.svg-facebook:before {
+  .svg-icon.svg-cloud-3:before {
       background-position: 0em -118.1em;
+      width: 19em;
+      height: 7.8em;
+  }
+
+
+
+
+  .svg-icon.svg-facebook:before {
+      background-position: 0em -125.9em;
       width: 1.1em;
       height: 2.3em;
   }
@@ -117,7 +126,7 @@
 
 
   .svg-icon.svg-img-catalog-product-1:before {
-      background-position: 0em -120.4em;
+      background-position: 0em -128.2em;
       width: 5.1em;
       height: 5.3em;
   }
@@ -126,7 +135,7 @@
 
 
   .svg-icon.svg-instagram:before {
-      background-position: 0em -125.7em;
+      background-position: 0em -133.5em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -135,7 +144,7 @@
 
 
   .svg-icon.svg-logotype:before {
-      background-position: 0em -127.5em;
+      background-position: 0em -135.3em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -144,7 +153,7 @@
 
 
   .svg-icon.svg-logotype-short:before {
-      background-position: 0em -137.1em;
+      background-position: 0em -144.9em;
       width: 15.2em;
       height: 4.1em;
   }
@@ -153,7 +162,7 @@
 
 
   .svg-icon.svg-navigation:before {
-      background-position: 0em -141.2em;
+      background-position: 0em -149em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -162,7 +171,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -149em;
+      background-position: 0em -156.8em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -171,7 +180,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -151.4em;
+      background-position: 0em -159.2em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -180,7 +189,7 @@
 
 
   .svg-icon.svg-pan:before {
-      background-position: 0em -175.6em;
+      background-position: 0em -183.4em;
       width: 14.8em;
       height: 6.6em;
   }
@@ -189,7 +198,7 @@
 
 
   .svg-icon.svg-paste:before {
-      background-position: 0em -182.2em;
+      background-position: 0em -190em;
       width: 9.5em;
       height: 6.1em;
   }
@@ -198,7 +207,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -188.3em;
+      background-position: 0em -196.1em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -207,7 +216,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -198.1em;
+      background-position: 0em -205.9em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -215,8 +224,17 @@
 
 
 
+  .svg-icon.svg-print-main:before {
+      background-position: 0em -230.2em;
+      width: 16.1em;
+      height: 16.1em;
+  }
+
+
+
+
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -222.4em;
+      background-position: 0em -246.3em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -225,7 +243,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -235.8em;
+      background-position: 0em -259.7em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -234,7 +252,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -249.2em;
+      background-position: 0em -273.1em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -243,7 +261,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -257.1em;
+      background-position: 0em -281em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -252,7 +270,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -262.4em;
+      background-position: 0em -286.3em;
       width: 10.3em;
       height: 7em;
   }
@@ -261,7 +279,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -269.4em;
+      background-position: 0em -293.3em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -270,7 +288,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -272.7em;
+      background-position: 0em -296.6em;
       width: 2em;
       height: 1.8em;
   }
@@ -279,7 +297,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -274.5em;
+      background-position: 0em -298.4em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -288,7 +306,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -276.1em;
+      background-position: 0em -300em;
       width: 12.1em;
       height: 11em;
   }
@@ -297,7 +315,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -287.1em;
+      background-position: 0em -311em;
       width: 2.8em;
       height: 1.7em;
   }
