--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -437,6 +437,36 @@ section {
   position: relative;
   overflow: hidden;
 
+  &-animeel {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    .cloud-left-1 {
+      position: absolute;
+      bottom: 70%;
+      left: -3%;
+    }
+
+    .cloud-left-2 {
+      position: absolute;
+      bottom: 19%;
+      font-size: 9px;
+    }
+
+    .cloud-left-3 {
+      position: absolute;
+      bottom: 64%;
+      left: 38%;
+    }
+
+    .cloud-right-1 {
+      position: absolute;
+      right: 17%;
+      top: 15%;
+    }
+  }
+
   &-box {
     display: flex;
     flex-direction: column;
@@ -620,8 +650,8 @@ section {
       position: absolute;
       background: url('../images/recepts-dashed.svg');
       background-repeat: no-repeat;
-      top: 0%;
-      left: -20%;
+      top: 13%;
+      left: -17%;
       z-index: -1;
 
       @include screen('md', 'max') {
@@ -792,45 +822,6 @@ section {
 
 .promo {
   position: relative;
-
-  span.bottom-ellips {
-    height: 120px;
-    width: 100%;
-    display: block;
-    position: absolute;
-    bottom: -60px;
-    left: 50%;
-    transform: translateX(-50%);
-    overflow: hidden;
-
-    &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 120px;
-      left: 0px;
-      box-sizing: content-box;
-      border-radius: 50%/50%;
-      padding: 0 70px;
-      margin-left: -50px;
-      background: $background-additional;
-    }
-  }
-
-  &::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 120px;
-    top: -60px;
-    left: 0px;
-    box-sizing: content-box;
-    border-radius: 50%/50%;
-    padding: 0 70px;
-    margin-left: -50px;
-    background: #ffffff;
-  }
-
   &-box {
     display: flex;
     flex-direction: column;
@@ -848,7 +839,7 @@ section {
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-      padding-bottom: 111px;
+      padding-bottom: 170px;
       position: relative;
 
       &::after {
@@ -891,7 +882,7 @@ section {
           & > i.svg-icon.svg-promo-box-top-text {
             position: absolute;
             bottom: 0;
-            left: 18%;
+            left: 22%;
           }
 
           & > img {
@@ -998,13 +989,13 @@ section {
           margin-top: -80px;
         }
 
-        i.svg-icon.svg-prevslogo {
-          width: 150px;
-          height: 150px;
+        i.svg-icon.svg-print-main {
+          width: 161px;
+          height: 161px;
           background-size: contain;
           position: absolute;
-          top: -75%;
-          right: 6%;
+          top: -64%;
+          right: 2%;
           transform-origin: bottom right;
 
           @include screen('lg', 'max') {
