--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -52,10 +52,11 @@ block content
           .mountains
             img(src="./images/mountains.png", alt="ГоРы")
             .mountains-cheese
+              img(src="./images/shadow-products.svg", alt="")
             +icon('rhombus', 'svg').rhombus-1
             +icon('rhombus', 'svg').rhombus-2
         .bottom-text
-          h2 Наша продукция изготавливается в экологически чистом регионе из отборного коровьего молока
+          h2 Наша продукция изготавливается <br>в экологически чистом регионе <br>из отборного коровьего молока
           .text-desc
             p Мы остаемся верны традициям, соблюдая оригинальную рецептуру.
             p Продукция изготавливается вручную лучшими 
@@ -78,12 +79,12 @@ block content
           .news-box-content
             .news-box-time 25.05
               span .2019
-            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак <br>в манеже»
         .news-box-small
           .news-box-content
             .news-box-time 25.05
               span .2019
-            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак <br>в манеже»
 
   +subscription().bg-white
   +footer().bg-white
