--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1046,6 +1046,11 @@ section {
             height: 294px;
             bottom: -30%;
             right: 58%;
+
+            img {
+              position: absolute;
+              bottom: -13px;
+            }
             
             @include screen('md', 'max') {
               width: 194px;
@@ -1211,7 +1216,7 @@ section {
     &-lg {
       grid-column: 1/2;
       grid-row: 1/3;
-      width: 90%;
+      width: 94%;
       border: 1px solid #312930;
       padding: 20px;
       display: flex;
