--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -20,7 +20,7 @@ mixin main-slider(json)
 
 block content
   +header()
-  section.main-index#main-index
+  section.main-index#main-index.waveSection-bottom-clip(data-color="#ffffff")
     .main-index-animeel
       +icon('cloud-1', 'svg').cloud-left-1
       +icon('cloud-2', 'svg').cloud-left-2
