--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1195,6 +1195,7 @@ section {
     &-row {
       display: grid;
       justify-content: space-between;
+      grid-column-gap: 100px;
 
       @include screen('sm', 'max') {
         display: flex;
