--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -79,12 +79,12 @@ block content
           .news-box-content
             .news-box-time 25.05
               span .2019
-            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак <br>в манеже»
+            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         .news-box-small
           .news-box-content
             .news-box-time 25.05
               span .2019
-            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак <br>в манеже»
+            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
 
   +subscription().bg-white
   +footer().bg-white
