--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -4,11 +4,9 @@
 .header.sticky {
   background: #fff;
   position: fixed;
-  //margin-top: -20px;
-  transform: translateY(-20px);
   height: 90px;
 
-  transition: transform 0.4s ease-in-out, background 0.4s ease-in-out;
+  transition: top 0.4s ease-in-out, background 0.4s ease-in-out;
 
   a.header-box-logotype {
     .svg-icon.svg-logotype {
@@ -23,8 +21,7 @@
 }
 
 .header.hide{
-  transform: translateY(calc(-100% - 50px));
-  transition: transform 0.4s ease-in-out, background 0.4s ease-in-out;
+  transition: top 0.4s ease-in-out, background 0.4s ease-in-out;
   background: #fff;
   a.header-box-logotype {
     .svg-icon.svg-logotype {
@@ -41,11 +38,8 @@
 .header {
   width: calc(100% - 40px);
   z-index: 9999;
-  
-  //position: absolute;
   position: fixed;
   transform: translateY(30px);
-  //margin-top: 30px;
   padding-right: $min-main-padding;
   padding-left: $min-main-padding;
   box-sizing: border-box;
