--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -42,6 +42,7 @@
   box-sizing: border-box;
   margin: 0 auto;
   position: relative;
+  overflow: hidden;
 
   @include screen('xs', 'max') {
     padding-top: 0;
