[UPDATE/pre-FIX] Скролл в бургере

--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -11,7 +11,7 @@ mixin right-group-link(json)
 
 mixin header
   .header
-    .header-static(data-scrollbar)
+    .header-static
       .header-box
         a.header-box-logotype(href="/")
           +icon('logotype', 'svg')
