[pre-FIX] Обновление главной секции, добавлен задний фон

--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -21,6 +21,7 @@ mixin main-slider(json)
 block content
   +header()
   section.main-index#main-index.waveSection-bottom-clip(data-color="#ffffff")
+    .main-index-backgound
     .main-index-animeel
       +icon('cloud-1', 'svg').cloud-left-1
       +icon('cloud-2', 'svg').cloud-left-2
