--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -430,13 +430,18 @@ section {
 }
 
 .main-index {
-  background-image: url('../images/main-index.png');
-  background-size: cover;
-  background-position: bottom;
   min-height: 900px;
-  background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
+
+  &-backgound {
+    margin-left: -20px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url('../images/main-index.png');
+    background-size: cover;
+  }
 
   &-animeel {
     position: absolute;
