[UPDATE/FIX] Обновление картинки в главной секции, исправление позиции картинки на главной

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -435,7 +435,7 @@ section {
   overflow: hidden;
 
   &-backgound {
-    margin-left: -20px;
+    left: 0;
     position: absolute;
     width: 100%;
     height: 100%;
