[FIX] Исправления на главной странице

--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 74.4em 312.7em;
+    background-size: 40.3em 249.7em;
 }
 
 .no-svg .svg-icon:before {
@@ -80,17 +80,17 @@
 
 
 
-  .svg-icon.svg-cheese-main-slider-1:before {
+  .svg-icon.svg-cheese:before {
       background-position: 0em -36.1em;
-      width: 74.4em;
-      height: 74.1em;
+      width: 15.7em;
+      height: 9.1em;
   }
 
 
 
 
   .svg-icon.svg-cloud-1:before {
-      background-position: 0em -110.2em;
+      background-position: 0em -45.2em;
       width: 12.3em;
       height: 2.5em;
   }
@@ -99,7 +99,7 @@
 
 
   .svg-icon.svg-cloud-2:before {
-      background-position: 0em -112.7em;
+      background-position: 0em -47.7em;
       width: 9.9em;
       height: 5.4em;
   }
@@ -108,7 +108,7 @@
 
 
   .svg-icon.svg-cloud-3:before {
-      background-position: 0em -118.1em;
+      background-position: 0em -53.1em;
       width: 19em;
       height: 7.8em;
   }
@@ -117,7 +117,7 @@
 
 
   .svg-icon.svg-facebook:before {
-      background-position: 0em -125.9em;
+      background-position: 0em -60.9em;
       width: 1.1em;
       height: 2.3em;
   }
@@ -126,7 +126,7 @@
 
 
   .svg-icon.svg-img-catalog-product-1:before {
-      background-position: 0em -128.2em;
+      background-position: 0em -63.2em;
       width: 5.1em;
       height: 5.3em;
   }
@@ -135,7 +135,7 @@
 
 
   .svg-icon.svg-instagram:before {
-      background-position: 0em -133.5em;
+      background-position: 0em -68.5em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -144,7 +144,7 @@
 
 
   .svg-icon.svg-logotype:before {
-      background-position: 0em -135.3em;
+      background-position: 0em -70.3em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -153,7 +153,7 @@
 
 
   .svg-icon.svg-logotype-short:before {
-      background-position: 0em -144.9em;
+      background-position: 0em -79.9em;
       width: 15.2em;
       height: 4.1em;
   }
@@ -161,8 +161,26 @@
 
 
 
+  .svg-icon.svg-main-link-arrow:before {
+      background-position: 0em -84em;
+      width: 1.3em;
+      height: 0.8em;
+  }
+
+
+
+
+  .svg-icon.svg-main-link-plus:before {
+      background-position: 0em -84.8em;
+      width: 1.2em;
+      height: 1.2em;
+  }
+
+
+
+
   .svg-icon.svg-navigation:before {
-      background-position: 0em -149em;
+      background-position: 0em -86em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -171,7 +189,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -156.8em;
+      background-position: 0em -93.8em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -180,7 +198,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -159.2em;
+      background-position: 0em -96.2em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -189,7 +207,7 @@
 
 
   .svg-icon.svg-pan:before {
-      background-position: 0em -183.4em;
+      background-position: 0em -120.4em;
       width: 14.8em;
       height: 6.6em;
   }
@@ -198,7 +216,7 @@
 
 
   .svg-icon.svg-paste:before {
-      background-position: 0em -190em;
+      background-position: 0em -127em;
       width: 9.5em;
       height: 6.1em;
   }
@@ -207,7 +225,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -196.1em;
+      background-position: 0em -133.1em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -216,7 +234,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -205.9em;
+      background-position: 0em -142.9em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -225,7 +243,7 @@
 
 
   .svg-icon.svg-print-main:before {
-      background-position: 0em -230.2em;
+      background-position: 0em -167.2em;
       width: 16.1em;
       height: 16.1em;
   }
@@ -234,7 +252,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -246.3em;
+      background-position: 0em -183.3em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -243,7 +261,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -259.7em;
+      background-position: 0em -196.7em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -252,7 +270,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -273.1em;
+      background-position: 0em -210.1em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -261,7 +279,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -281em;
+      background-position: 0em -218em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -270,7 +288,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -286.3em;
+      background-position: 0em -223.3em;
       width: 10.3em;
       height: 7em;
   }
@@ -279,7 +297,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -293.3em;
+      background-position: 0em -230.3em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -288,7 +306,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -296.6em;
+      background-position: 0em -233.6em;
       width: 2em;
       height: 1.8em;
   }
@@ -297,7 +315,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -298.4em;
+      background-position: 0em -235.4em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -306,7 +324,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -300em;
+      background-position: 0em -237em;
       width: 12.1em;
       height: 11em;
   }
@@ -315,7 +333,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -311em;
+      background-position: 0em -248em;
       width: 2.8em;
       height: 1.7em;
   }
