--- a/app/templates/mixins/ui.pug
+++ b/app/templates/mixins/ui.pug
@@ -26,6 +26,8 @@ mixin link(name, link, addon)
   if(addon == 'true')
     a.main-link.addon(href=link) #{name}
       span
+        +icon('main-link-plus', 'svg')
+        +icon('main-link-arrow', 'svg')
   else
     a.main-link(href=link) #{name}
 
