--- a/app/templates/modules/footer.pug
+++ b/app/templates/modules/footer.pug
@@ -34,7 +34,7 @@ mixin footer()
           .footer-box-nav-tel-group
             .footer-box-nav-tel-group-desc Служба поддержки потребителей
             .footer-box-nav-tel-group-number 8 800 250-93-93
-          a(href="") Задать вопрос
+          +link('Задать вопрос', '#')
         .footer-box-nav-adderlinks
           a(href="#") Политика конфиденциальности
           a(href="#") Положение о персональных данных
