[FIX/UPDATE] Тень для продукта в слайдере / обновление папки docs

--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -13,6 +13,7 @@ mixin main-slider(json)
     .main-index-box-slider-el.swiper-slide
       .main-index-box-slider-el-left
         img(src=data.icon)
+        .shadow
         .addons
           +icon('rhombus', 'svg').rhombus-1
           +icon('rhombus', 'svg').rhombus-2
