--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -498,6 +498,21 @@ section {
             position: relative;
             top: 70px;
           }
+          
+          .shadow {
+            &::after {
+              display: block;
+              content: "";
+              position: absolute;
+              background: url(../images/shadow-main-slider.svg);
+              background-repeat: no-repeat;
+              width: 100%;
+              height: 120px;
+              bottom: -36%;
+              left: 50%;
+              transform: translateX(-38%);
+            }
+          }
 
           .addons {
             position: absolute;
@@ -587,6 +602,7 @@ section {
       }
 
       &-arrows.main-slider-buttons {
+        z-index: 10;
         @include screen('custom-860', 'max') {
           display: none;
         }
