--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -13,5 +13,6 @@ html(lang="ru")
         .container
             block content
             include ../modules/footer
+        #scroll-box-events
         script(src='js/scripts.min.js')
         block scripts
